templates/pure/style.css
/* ... */
            .c-menu--htx.is-active span::after {
                bottom: 0;
                transform: rotate(-13deg) }
            .c-menu--htx.is-active span::after,
            .c-menu--htx.is-active span::before {
                transition-delay: 0s,.3s }

#menubar_mobile {
    display: grid;
    width: 100%;
    bottom: 0;
    position: -webkit-fixed;
    position: fixed;
    overflow: hidden;
    align-items: center;
    justify-content: center;
    background-color: #294564;
    box-shadow: 0 1px 4px rgba(0,0,0,.5);
    color: #ccdde7;
    text-shadow: 1px 1px 1px rgba(0,0,0,.7);
}
#menubar_mobile p {
    width: 78%;
    display: inline-block;
    margin-left: 1em;
    vertical-align: text-bottom;
}
#menubar_mobile nav#menu {
    display: inline-block;
    width: 100%;
    margin: .5em auto 0;
    color: #ccdde7;
}
/* reset the mobile hamburger styles */
@media screen and (min-width:640px) {
    #footer {
        display: initial;
    }
    #menubar_mobile {
        display: none;
    }
    #serendipity_banner {
        display: initial;
        position: initial;
        top: initial;
        padding-bottom: initial;
    }
    #menu {
        display: none;
    }
    #content {
        margin: 1em auto 0;
    }
}

/** Backend preview **/
#content.save_preview_content .msg_success {
    font-size: 1rem;
}
#content.save_preview_content {
    background: #FFF;
    border-radius: 0;
    width: 100%;
}
#content.preview_preview_content {
    width: 100%;
    background: #FFF;
}
#content.save_preview_content a:hover {
    color: #001f3f;
}
#content.save_preview_content a:link, #content.save_preview_content a:visited, #content.save_preview_content a:active {
    color: #0074d9;
}
#content.preview_preview_content div.serendipity_entryFooter {
    display: none;
    visibility: hidden;
}



/** General rules **/

.serendipity_edit_nugget {
    font-size: 12px;
    font-size: .75rem;
    text-align: right;
    margin-top: .25rem;
    margin-bottom: .25rem;
}
.serendipityImageButton {
    cursor: pointer;
}
.serendipity_center {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1em;
    text-align: center;
    font-size: .8125rem;
}
.serendipity_search_results .searchterm {}
.serendipity_search_results .searchresults {}


/** Messaging **/

.staticpage_results,
.serendipity_search,
.serendipity_content_message, .content_msg
.serendipity_msg_success, .msg_success,
.serendipity_msg_notice, .msg_notice,
.serendipity_msg_important, .msg_important,
.msg_question,
.serendipity_commentDirection {
  display: block;
  width: 100%;
  font-size: 13px;
  font-size: 0.8125rem;
  margin-bottom: 1em;
  padding: .5em .25em;
  border: 1px solid #aaa;
  border-radius: .25em;
  box-shadow: 1px 2px 3px #ccc; }
  .serendipity_msg_important p, .serendipity_msg_success p, .serendipity_msg_notice p, .msg_important p, .msg_success p, .msg_notice p, .msg_question p, .serendipity_commentDirection p {
    margin: 0; }
  .search_msg,
  .serendipity_search {
    background-color: lightgray; }
  .content_msg, .serendipity_content_message,
  .serendipity_commentDirection {
    background-color: #f0f8ff; }
  .msg_important, .serendipity_msg_important {
    background: #f2dede; /* light red */
    border-color: #eed3d7;
    color: #b94a2b; }
  .msg_success. .serendipity_msg_success {
    background: #dff0d8; /* light green */
    border-color: #d6e9c6;
    color: #468847; }
  .msg_notice, .serendipity_msg_notice {
    background: #d9edf7; /* light blue */
    border-color: #bce8f1;
    color: #3a87ad; }
  .msg_notice.serendipity_subscription_on,
  .msg_notice.serendipity_subscription_pending,
  .msg_notice.serendipity_subscription_off {
    margin-top: .5em; }
  .msg_notice.serendipity_subscription_off {
    display: none;
    visibility: hidden; }
  .msg_question {
    background: #fcf8e3; /* light yellow */
    border-color: #fbeed5;
    color: #c09853; }


/** Entries **/
#content p {
    word-break: break-word;
    overflow: auto; /*avoids nesting and overlaps*/
}
.post_content {
    display: inline-block;
    line-height: 1.6;
    width: 100%; }
    .post_content blockquote {
        border-left: 5px solid #ccc;
        padding-left: 1em; }
@media screen and (min-width: 1024px) {
    #content {
        display: block;
        min-width: 33.3em;
        max-width: 100%; }
    .post_content {
        display: contents; }
}
.serendipity_title {
    font-family: Verdana, Arial, Geneva, Helvetica, sans-serif;
    font-size: .938rem;
    font-weight: bold;
    margin-top: 1em;
    color: #333;
    border-bottom: 2px ridge #DDD;
}
.serendipity_title a:link,
.serendipity_title a:visited {
    text-decoration: none;
    border: 0 none;
    color: #222;
}
.serendipity_title a:hover {
    color: #ff4136;
}
.post {
    width: 100%;
    margin-top: .5em;
}
.post_info,
.serendipity_entryFooter {
    background-color: #fafafa;
    border: 1px solid #eee;
    border-radius: 4px;
    box-shadow: 1px 1px 2px rgba(111, 111, 111, 0.5);
    margin: 1rem auto;
    padding-left: .25em;
    padding-right: .25em;
    font-size: .938rem;
}
.post_info.listed_view .plainList li {
    display: inline-block;
}
.post_info.listed_view .plainList li:not(:first-of-type)::before {
    content: " | ";
    padding-right: .25em;
}
.post table,
.post_content table {/* yes, since within #extended id knot */
    display: inline-grid;
    max-width: 100%;
    width: auto;
    overflow: auto;
    border-collapse: separate;
    border: 1px solid #eee;
    padding: .5em; }
.serendipity_entry_author_self {}
.serendipity_entry_read_more {
    text-align: right;
    margin-top: 1.5em;
}
.serendipity_entry_date,
.serendipity_Entry_Date {
    margin: auto;
}
.serendipity_date {
    font-family: Verdana, Arial, Geneva, Helvetica, sans-serif;
    font-variant: all-petite-caps;
    font-size: 18px;
    font-size: 1.125rem;
    color: #333;
    margin: 0;
    text-align: right;
}
/* ... */

